msa/k8s/k8s-monitoring/prometheus-depl_svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
    # rabc에서 만든 ServiceAccount를 Prometheus Pod에 연결
    # Prometheus는 node에 접근하여 node-exporter로부터 정보를 수집
      serviceAccountName: prometheus
      containers:
        - name: prometheus
          image: prom/prometheus
          args:
          # 아래 volumnMount를 통해 저장된 prometheus.yml 파일을 read
          # 이 파일을 기반으로 node-exporter에서 시스템 정보를 수집
            - "--config.file=/etc/prometheus/prometheus.yml"
          ports:
            - containerPort: 9090
          resources:
          # 컨테이너가 사용할수 있는 리소스의 최대치
            limits:
              cpu: "1"
              memory: "500Mi"
          # 컨테이너가 시작될떄 보장받아야 하는 최소 자원
            requests:
              cpu: "0.5"
              memory: "250Mi"
          volumeMounts:
            - name: config-volume
              mountPath: /etc/prometheus
              # 아래의 volumes에 저장된 config설정을 위 volumeMount로 즉, 컨테이너 내의 /etc/prometheus에 저장하는것
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-config
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: monitoring
spec:
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app: prometheus
